--- a/quotes.html
+++ b/quotes.html
@@ -240,6 +240,406 @@
           id: 20,
           author: "Anonymous",
           quote: "To succeed, you must fail many times, because the secret of success is resilience."
+        },
+        {
+          id: 21,
+          author: "Ralph Waldo Emerson (1803–1882)",
+          quote: "Every artist was first an amateur."
+        },
+        {
+          id: 22,
+          author: "Thomas Edison (1847–1931)",
+          quote: "I have not failed. I've just found 10,000 ways that won't work."
+        },
+        {
+          id: 23,
+          author: "Henri Matisse (1869–1954)",
+          quote: "Creativity takes courage."
+        },
+        {
+          id: 24,
+          author: "Oscar Wilde (1854–1900)",
+          quote: "No great artist ever sees things as they really are. If he did, he would cease to be an artist."
+        },
+        {
+          id: 25,
+          author: "Leonardo da Vinci (1452–1519)",
+          quote: "The painter has the Universe in his mind and hands."
+        },
+        {
+          id: 26,
+          author: "Pablo Picasso (1881–1973)",
+          quote: "Every child is an artist. The problem is how to remain an artist once we grow up."
+        },
+        {
+          id: 27,
+          author: "Vincent van Gogh (1853–1890)",
+          quote: "Great things are done by a series of small things brought together."
+        },
+        {
+          id: 28,
+          author: "Friedrich Nietzsche (1844–1900)",
+          quote: "We have art in order not to die of the truth."
+        },
+        {
+          id: 29,
+          author: "Aristotle (384 BCE–322 BCE)",
+          quote: "The aim of art is to represent not the outward appearance of things, but their inward significance."
+        },
+        {
+          id: 30,
+          author: "Francis Bacon (1561–1626)",
+          quote: "A wise man will make more opportunities than he finds."
+        },
+        {
+          id: 31,
+          author: "Henry David Thoreau (1817–1862)",
+          quote: "This world is but a canvas to our imagination."
+        },
+        {
+          id: 32,
+          author: "Albert Einstein (1879–1955)",
+          quote: "Imagination is more important than knowledge. For knowledge is limited, whereas imagination embraces the entire world."
+        },
+        {
+          id: 33,
+          author: "Lao Tzu (6th Century BCE)",
+          quote: "A journey of a thousand miles begins with a single step."
+        },
+        {
+          id: 34,
+          author: "Benjamin Franklin (1706–1790)",
+          quote: "An investment in knowledge always pays the best interest."
+        },
+        {
+          id: 35,
+          author: "John Ruskin (1819–1900)",
+          quote: "The greatest thing a human soul ever does in this world is to see something and tell what it saw in a plain way."
+        },
+        {
+          id: 36,
+          author: "Marcus Aurelius (121–180)",
+          quote: "You have power over your mind—not outside events. Realize this, and you will find strength."
+        },
+        {
+          id: 37,
+          author: "Michelangelo (1475–1564)",
+          quote: "The greater danger for most of us lies not in setting our aim too high and falling short, but in setting our aim too low and achieving our mark."
+        },
+        {
+          id: 38,
+          author: "William Blake (1757–1827)",
+          quote: "The true method of knowledge is experiment."
+        },
+        {
+          id: 39,
+          author: "George Bernard Shaw (1856–1950)",
+          quote: "Imagination is the beginning of creation."
+        },
+        {
+          id: 40,
+          author: "Ludwig van Beethoven (1770–1827)",
+          quote: "Don’t only practice your art, but force your way into its secrets."
+        },
+        {
+          id: 41,
+          author: "Albert Einstein (1879–1955)",
+          quote: "The true sign of intelligence is not knowledge but imagination."
+        },
+        {
+          id: 42,
+          author: "Pablo Picasso (1881–1973)",
+          quote: "Everything you can imagine is real."
+        },
+        {
+          id: 43,
+          author: "Henry Ward Beecher (1813–1887)",
+          quote: "Every artist dips his brush in his own soul, and paints his own nature into his pictures."
+        },
+        {
+          id: 44,
+          author: "Leonardo da Vinci (1452–1519)",
+          quote: "Art is never finished, only abandoned."
+        },
+        {
+          id: 45,
+          author: "Ralph Waldo Emerson (1803–1882)",
+          quote: "Imagination is not a talent of some men but is the health of every man."
+        },
+        {
+          id: 46,
+          author: "Henri Cartier-Bresson (1908–2004)",
+          quote: "To photograph is to hold one’s breath when all faculties converge to capture fleeting reality."
+        },
+        {
+          id: 47,
+          author: "Friedrich Schiller (1759–1805)",
+          quote: "Genius is the ability to carry the spirit of the child into old age."
+        },
+        {
+          id: 48,
+          author: "Auguste Rodin (1840–1917)",
+          quote: "I invent nothing. I rediscover."
+        },
+        {
+          id: 49,
+          author: "Michelangelo (1475–1564)",
+          quote: "I saw the angel in the marble and carved until I set him free."
+        },
+        {
+          id: 50,
+          author: "Marcus Aurelius (121–180)",
+          quote: "The soul becomes dyed with the color of its thoughts."
+        },
+        {
+          id: 51,
+          author: "Aristotle (384 BCE–322 BCE)",
+          quote: "The more you know, the more you realize you don’t know."
+        },
+        {
+          id: 52,
+          author: "John Keats (1795–1821)",
+          quote: "A thing of beauty is a joy forever."
+        },
+        {
+          id: 53,
+          author: "Henri Matisse (1869–1954)",
+          quote: "Creativity takes courage."
+        },
+        {
+          id: 54,
+          author: "Francis Bacon (1561–1626)",
+          quote: "In order for the light to shine so brightly, the darkness must be present."
+        },
+        {
+          id: 55,
+          author: "William Shakespeare (1564–1616)",
+          quote: "The object of art is to give life a shape."
+        },
+        {
+          id: 56,
+          author: "Victor Hugo (1802–1885)",
+          quote: "To love beauty is to see light."
+        },
+        {
+          id: 57,
+          author: "Horace (65 BCE–8 BCE)",
+          quote: "A picture is a poem without words."
+        },
+        {
+          id: 58,
+          author: "Leon Battista Alberti (1404–1472)",
+          quote: "Painting is possessed of divine power, for not only does it make the absent present, but also makes the dead seem almost alive."
+        },
+        {
+          id: 59,
+          author: "Emily Dickinson (1830–1886)",
+          quote: "I dwell in possibility."
+        },
+        {
+          id: 60,
+          author: "Claude Monet (1840–1926)",
+          quote: "Color is my day-long obsession, joy, and torment."
+        },
+        {
+          id: 61,
+          author: "James Baldwin (1924–1987)",
+          quote: "The purpose of art is to lay bare the questions that have been concealed by the answers."
+        },
+        {
+          id: 62,
+          author: "Johann Wolfgang von Goethe (1749–1832)",
+          quote: "A creation of importance can only be produced when its author isolates himself; it is a child of solitude."
+        },
+        {
+          id: 63,
+          author: "Alphonse de Lamartine (1790–1869)",
+          quote: "Poetry is the echo of the melody of the universe in the heart of humans."
+        },
+        {
+          id: 64,
+          author: "Robert Frost (1874–1963)",
+          quote: "Poetry is when an emotion has found its thought and the thought has found words."
+        },
+        {
+          id: 65,
+          author: "John Ruskin (1819–1900)",
+          quote: "Art is not a study of positive reality; it is the seeking for ideal truth."
+        },
+        {
+          id: 66,
+          author: "Paul Klee (1879–1940)",
+          quote: "A line is a dot that went for a walk."
+        },
+        {
+          id: 67,
+          author: "Ludwig van Beethoven (1770–1827)",
+          quote: "Art! Who comprehends her? With whom can one consult concerning this great goddess?"
+        },
+        {
+          id: 68,
+          author: "George Bernard Shaw (1856–1950)",
+          quote: "You see things; and you say 'Why?' But I dream things that never were; and I say 'Why not?'"
+        },
+        {
+          id: 69,
+          author: "Salvador Dalí (1904–1989)",
+          quote: "Have no fear of perfection - you’ll never reach it."
+        },
+        {
+          id: 70,
+          author: "Edgar Degas (1834–1917)",
+          quote: "Art is not what you see, but what you make others see."
+        },
+        {
+          id: 71,
+          author: "Vincent van Gogh (1853–1890)",
+          quote: "What would life be if we had no courage to attempt anything?"
+        },
+        {
+          id: 72,
+          author: "William Blake (1757–1827)",
+          quote: "Imagination is the real and eternal world of which this vegetable universe is but a faint shadow."
+        },
+        {
+          id: 73,
+          author: "Antoni Gaudí (1852–1926)",
+          quote: "Anything created by human beings is already in the great book of nature."
+        },
+        {
+          id: 74,
+          author: "Eleanor Roosevelt (1884–1962)",
+          quote: "The future belongs to those who believe in the beauty of their dreams."
+        },
+        {
+          id: 75,
+          author: "Lao Tzu (6th Century BCE)",
+          quote: "Music in the soul can be heard by the universe."
+        },
+        {
+          id: 76,
+          author: "Johann Sebastian Bach (1685–1750)",
+          quote: "I was obliged to be industrious. Whoever is equally industrious will succeed equally well."
+        },
+        {
+          id: 77,
+          author: "Charlotte Brontë (1816–1855)",
+          quote: "I am no bird; and no net ensnares me: I am a free human being with an independent will."
+        },
+        {
+          id: 78,
+          author: "Thomas Carlyle (1795–1881)",
+          quote: "Nothing builds self-esteem and self-confidence like accomplishment."
+        },
+        {
+          id: 79,
+          author: "Joseph Addison (1672–1719)",
+          quote: "What sculpture is to a block of marble, education is to the soul."
+        },
+        {
+          id: 80,
+          author: "Zhuang Zhou (4th Century BCE)",
+          quote: "Flow with whatever may happen, and let your mind be free: Stay centered by accepting whatever you are doing. This is the ultimate."
+        },
+        {
+          id: 81,
+          author: "Johannes Vermeer (1632–1675)",
+          quote: "The art of painting is to see beyond the canvas."
+        },
+        {
+          id: 82,
+          author: "Edvard Munch (1863–1944)",
+          quote: "Art comes from joy and pain... but mostly from pain."
+        },
+        {
+          id: 83,
+          author: "Victor Hugo (1802–1885)",
+          quote: "Music expresses that which cannot be put into words and that which cannot remain silent."
+        },
+        {
+          id: 84,
+          author: "Leonardo da Vinci (1452–1519)",
+          quote: "Learning never exhausts the mind."
+        },
+        {
+          id: 85,
+          author: "Plato (428 BCE–348 BCE)",
+          quote: "Music is a moral law. It gives soul to the universe, wings to the mind, flight to the imagination, and charm to life."
+        },
+        {
+          id: 86,
+          author: "Marcus Aurelius (121–180)",
+          quote: "The universe is change; our life is what our thoughts make it."
+        },
+        {
+          id: 87,
+          author: "Michelangelo (1475–1564)",
+          quote: "If people knew how hard I worked to get my mastery, it wouldn’t seem so wonderful at all."
+        },
+        {
+          id: 88,
+          author: "Horace (65 BCE–8 BCE)",
+          quote: "Adversity has the effect of eliciting talents which, in prosperous circumstances, would have lain dormant."
+        },
+        {
+          id: 89,
+          author: "Jane Austen (1775–1817)",
+          quote: "Know your own happiness. You want nothing but patience—or give it a more fascinating name, call it hope."
+        },
+        {
+          id: 90,
+          author: "Arthur Conan Doyle (1859–1930)",
+          quote: "Mediocrity knows nothing higher than itself; but talent instantly recognizes genius."
+        },
+        {
+          id: 91,
+          author: "Henry David Thoreau (1817–1862)",
+          quote: "Go confidently in the direction of your dreams. Live the life you have imagined."
+        },
+        {
+          id: 92,
+          author: "Wassily Kandinsky (1866–1944)",
+          quote: "Color is a power which directly influences the soul."
+        },
+        {
+          id: 93,
+          author: "Gustav Klimt (1862–1918)",
+          quote: "Art is a line around your thoughts."
+        },
+        {
+          id: 94,
+          author: "Antoine de Saint-Exupéry (1900–1944)",
+          quote: "A designer knows he has achieved perfection not when there is nothing left to add, but when there is nothing left to take away."
+        },
+        {
+          id: 95,
+          author: "Marcel Duchamp (1887–1968)",
+          quote: "I have forced myself to contradict myself in order to avoid conforming to my own taste."
+        },
+        {
+          id: 96,
+          author: "Edgar Allan Poe (1809–1849)",
+          quote: "Those who dream by day are cognizant of many things which escape those who dream only by night."
+        },
+        {
+          id: 97,
+          author: "Paul Cézanne (1839–1906)",
+          quote: "Art is a harmony parallel with nature."
+        },
+        {
+          id: 98,
+          author: "James Joyce (1882–1941)",
+          quote: "Mistakes are the portals of discovery."
+        },
+        {
+          id: 99,
+          author: "William Morris (1834–1896)",
+          quote: "The true secret of happiness lies in the taking a genuine interest in all the details of daily life."
+        },
+        {
+          id: 100,
+          author: "Claude Debussy (1862–1918)",
+          quote: "Music is the space between the notes."
         }
 ]
 
