--- a/creative_cards.html
+++ b/creative_cards.html
@@ -2476,10 +2476,88 @@
           example: "The Beatles were rejected by multiple record labels before securing a deal with EMI’s Parlophone label. They became one of the most influential bands in history.",
           insight: "Believing in your idea and persisting through rejection can lead to groundbreaking achievements.",
           prompt: "What idea of yours deserves persistence despite initial setbacks?"
+        },
+        {
+          id: 293,
+          title: "Prioritise Innovation for the Greater Good",
+          content: "Designing safety-focused innovations can create lasting societal impact while enhancing brand identity.",
+          example: "In 1959, Volvo engineer Nils Bohlin invented the modern three-point seat belt, a simple yet life-saving design. Instead of patenting it for profit, Volvo made the design freely available to other manufacturers, prioritising public safety over exclusivity. This decision not only saved millions of lives but also reinforced Volvo's reputation as a leader in safety innovation.",
+          insight: "Innovations that prioritise societal well-being can build trust and define a brand’s legacy.",
+          prompt: "What innovation can you create that prioritises safety and benefits society as a whole?"
+        },
+        {
+          id: 294,
+          title: "Push Boundaries to Capture the Unconventional",
+          content: "Bold creative decisions, even controversial ones, can create groundbreaking art.",
+          example: "During the recording of Love to Love You Baby, Donna Summer improvised moans and whispers to channel sensuality, inspired by Serge Gainsbourg and Jane Birkin's Je t’aime… moi non plus. Giorgio Moroder encouraged this raw, provocative style, creating a track that broke norms and defined a genre.",
+          insight: "Risk-taking and pushing boundaries can result in work that stands out and resonates deeply.",
+          prompt: "What creative risks can you take to push your project into uncharted territory?"
+        },
+        {
+          id: 295,
+          title: "Evolve to Match Audience Demand",
+          content: "Adapting and expanding a product to align with audience expectations can amplify its success.",
+          example: "Donna Summer’s Love to Love You Baby was initially a three-minute single. However, producer Giorgio Moroder expanded it to 17 minutes after realizing its hypnotic groove was too short for club play—and because its sensuality lent itself to romantic encounters. This bold move made it iconic in the disco era.",
+          insight: "Understanding audience context can turn a good idea into a legendary one.",
+          prompt: "How can you adapt your work to fit audience expectations more effectively?"
+        },
+        {
+          id: 296,
+          title: "Adapt and Expand Universes",
+          content: "Consistent evolution of a franchise through new formats, stories, and technology keeps it relevant and appealing.",
+          example: "Pokémon began as a Game Boy game in 1996 but expanded into a global phenomenon with trading cards, TV series, movies, mobile apps (Pokémon GO), and merchandise. Each expansion embraced new technologies and audience trends, ensuring its enduring success.",
+          insight: "Diversifying and adapting a core idea across different mediums can extend its lifespan and audience reach.",
+          prompt: "What new formats or technologies can you use to expand your project’s reach and relevance?"
+        },
+        {
+          id: 297,
+          title: "Tie Patterns to Cultural Identity",
+          content: "Unique patterns or designs can become emblematic of cultural pride.",
+          example: "Scottish tartans, initially clan-specific, became globally recognised as symbols of Scotland, worn both by locals and international enthusiasts.",
+          insight: "Emphasising distinct visual identities reinforces cultural resonance.",
+          prompt: "How can a visual design become synonymous with your project’s culture?"
+        },
+        {
+          id: 298,
+          title: "Create Interactive Experiences",
+          content: "Engaging an audience in participation can turn cult works into community-driven phenomena.",
+          example: "Midnight screenings of The Rocky Horror Picture Show turned a niche musical into a decades-long cultural event. Fans dress up, shout lines, and participate in choreographed activities, creating a communal experience.",
+          insight: "Interactive engagement builds passionate, long-lasting communities.",
+          prompt: "How can you turn your work into an interactive cultural event?"
+        },
+        {
+          id: 299,
+          title: "Adopt Localised Entertainment Trends",
+          content: "Local adaptations of games or technologies can grow into unique traditions.",
+          example: "Pachinko machines, originally inspired by Western pinball games, evolved into a massive entertainment industry in Japan, blending gaming with a social and gambling culture unique to the region.",
+          insight: "Adapting ideas to fit cultural preferences can create unique and enduring phenomena.",
+          prompt: "How can you localise your idea to suit a specific culture’s preferences?"
+        },
+        {
+          id: 300,
+          title: "Transform a Song into Tradition",
+          content: "A simple song or poem can become a cultural touchstone when tied to a shared event.",
+          example: "Auld Lang Syne, a traditional Scottish poem set to music, became synonymous with New Year’s Eve celebrations worldwide, even though its lyrics and origins are not widely understood. Its emotional appeal during moments of reflection secured its place in global traditions.",
+          insight: "Linking a creation to a recurring event embeds it in collective memory.",
+          prompt: "What recurring event or tradition can your project attach itself to?"
+        },
+        {
+          id: 301,
+          title: "Embrace Cultural Phenomena",
+          content: "Unique cultural adoptions can turn niche ideas into enduring traditions.",
+          example: "Dinner for One, a British comedy sketch from 1963, is largely unknown in the UK but has become an iconic New Year’s Eve tradition in Germany and other European countries. Its simple, repetitive humor and catchphrase, “The same procedure as every year,” resonate deeply, making it a staple despite its obscure origins.",
+          insight: "Cultural resonance can transform overlooked or niche works into beloved traditions.",
+          prompt: "How can you adapt your project to align with or create cultural traditions?"
+        },
+        {
+          id: 302,
+          title: "Rebrand to Diversify Appeal",
+          content: "Shortening or adapting a name can signal diversification or modernisation.",
+          example: "Kentucky Fried Chicken rebranded as KFC in 1991 to de-emphasise “fried” and appeal to a health-conscious audience, signalling a broader menu.",
+          insight: "Strategic renaming can adapt a product to meet changing perceptions.",
+          prompt: "How can a rebrand signal broader offerings or new directions for your project?"
         }
 ]
-
-
         let currentCardIndex = 0;
 
 function shuffleArray(array) {
