--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
   <br/>
   <br/>
   <a href="quotes.html">Quotes</a>
+  <br/>
+  <br/>
+  <a href="ripple.html">The Ripple Effect</a>
 </body>
 </html>
