--- a/ripple.html
+++ b/ripple.html
@@ -91,24 +91,6 @@
             letter-spacing: 1.5px;
         }
 
-        .quote-container:before {
-            content: "“";
-            font-size: 100px;
-            color: #8b0000;
-            position: absolute;
-            top: -20px;
-            left: -50px;
-        }
-
-        .quote-container:after {
-            content: "”";
-            font-size: 100px;
-            color: #8b0000;
-            position: absolute;
-            bottom: -75px;
-            right: -30px;
-        }
-
         .quote-container .quote {
           width: 90%;
         }
@@ -175,6 +157,146 @@
     "origin": "Shoppers initially used hand-carried baskets, limiting how much they could buy.",
     "pivotal_change": "The invention of the wheeled shopping cart allowed customers to carry more items easily.",
     "ripple_effect": "This innovation reshaped consumer habits, expanded supermarket layouts, and increased sales volume."
+  },
+   {
+    "id": 16,
+    "title": "Toothpaste in a Tube",
+    "origin": "Toothpaste was once sold in jars, requiring users to dip a brush or finger.",
+    "pivotal_change": "Inspired by paint tubes, Dr. Sheffield began packaging toothpaste in squeezable tubes.",
+    "ripple_effect": "Improved hygiene and portability, setting a packaging standard that influenced cosmetics and pharmaceutical products globally."
+  },
+  {
+    "id": 17,
+    "title": "Fanta’s Wartime Invention",
+    "origin": "Coca-Cola's German branch couldn’t import syrup during WWII due to trade restrictions.",
+    "pivotal_change": "The team improvised a new drink using available fruit byproducts and called it Fanta.",
+    "ripple_effect": "Fanta became one of Coca-Cola’s biggest brands worldwide, showing how innovation can emerge from scarcity."
+  },
+  {
+    "id": 18,
+    "title": "Bubble Tea’s Playful Origins",
+    "origin": "A Taiwanese tea shop added tapioca pearls to cold tea as a fun experiment.",
+    "pivotal_change": "Customers loved the chewy texture, and the concept quickly spread across Asia.",
+    "ripple_effect": "Bubble tea became a global drink trend, spawning chains, pop culture references, and fusion beverage innovations."
+  },
+  {
+    "id": 19,
+    "title": "The Accidental Laser Pointer Sale",
+    "origin": "The first item ever sold on eBay was a broken laser pointer.",
+    "pivotal_change": "The buyer confirmed it was bought intentionally, proving the viability of a peer-to-peer marketplace.",
+    "ripple_effect": "Launched a global e-commerce platform that normalized secondhand online trade and individual entrepreneurship."
+  },
+  {
+    "id": 20,
+    "title": "Oxford’s Word of the Year: 😂",
+    "origin": "Oxford Dictionaries chose the 'Face with Tears of Joy' emoji as 2015’s Word of the Year.",
+    "pivotal_change": "It marked the first time an image, not a word, was chosen.",
+    "ripple_effect": "It solidified emojis as a legitimate part of digital language and communication studies."
+  },
+  {
+    "id": 21,
+    "title": "The Credit Card Came From Embarrassment",
+    "origin": "Frank McNamara forgot his wallet while dining and had to promise payment later.",
+    "pivotal_change": "He co-founded Diners Club, the first universal charge card.",
+    "ripple_effect": "Sparked the global credit card industry and changed consumer spending forever."
+  },
+  {
+    "id": 22,
+    "title": "Tylenol Tampering Crisis",
+    "origin": "In 1982, poisoned Tylenol capsules killed several people in Chicago.",
+    "pivotal_change": "Johnson & Johnson introduced tamper-evident packaging.",
+    "ripple_effect": "Set a new industry standard for safety packaging, now ubiquitous in consumer products."
+  },
+  {
+    "id": 23,
+    "title": "Elevator Music’s Purpose",
+    "origin": "Early elevators were new and frightening to people unfamiliar with vertical motion.",
+    "pivotal_change": "Soothing music was introduced to ease passenger anxiety.",
+    "ripple_effect": "Gave rise to the ambient music genre and normalized psychological design in everyday infrastructure."
+  },
+  {
+    "id": 24,
+    "title": "Corn Flakes and Anti-Masturbation",
+    "origin": "John Harvey Kellogg invented bland corn flakes as part of a health regimen to suppress 'impure' urges.",
+    "pivotal_change": "His brother saw commercial potential and began mass-producing them as a breakfast cereal.",
+    "ripple_effect": "Created the packaged cereal industry and shaped modern breakfast culture."
+  },
+  {
+    "id": 25,
+    "title": "The Yo-Yo Was a Weapon",
+    "origin": "The yo-yo originated as a hunting weapon in the Philippines with sharp edges and string recoil.",
+    "pivotal_change": "An American entrepreneur marketed it as a toy in the 1920s.",
+    "ripple_effect": "Transformed into a global toy phenomenon and competitive skill sport."
+  },
+  {
+    "id": 26,
+    "title": "The Pause Button",
+    "origin": "Early audio recorders didn’t have a way to temporarily stop without ending a session.",
+    "pivotal_change": "Engineers added a pause function to improve usability.",
+    "ripple_effect": "This small UI tweak spread to every digital interaction — from media to forms — becoming a universal affordance."
+  },
+  {
+    "id": 27,
+    "title": "Why Phones Say 'Hello'",
+    "origin": "Alexander Graham Bell wanted people to say 'Ahoy!' when answering phones.",
+    "pivotal_change": "Thomas Edison promoted 'Hello' instead — and it stuck.",
+    "ripple_effect": "It normalized the use of 'hello' in everyday speech and shifted communication norms forever."
+  },
+  {
+    "id": 28,
+    "title": "The Happy Accident of Super Glue",
+    "origin": "Cyanoacrylate was discovered while trying to create clear plastic for gun sights.",
+    "pivotal_change": "Its intense bonding properties were seen as a problem — until someone realized its potential.",
+    "ripple_effect": "Now used in homes, surgeries, and battlefields — one of the most versatile adhesives in history."
+  },
+  {
+    "id": 29,
+    "title": "Barcodes Came from Beach Sand",
+    "origin": "An engineer was inspired by Morse code and lines in the sand to encode product data.",
+    "pivotal_change": "He developed the barcode system, first used on a pack of Wrigley’s gum in 1974.",
+    "ripple_effect": "Enabled the modern global supply chain and retail industry — from supermarkets to hospitals."
+  },
+  {
+    "id": 30,
+    "title": "Sunscreen from WWII",
+    "origin": "Soldiers in WWII suffered severe sunburn in tropical locations.",
+    "pivotal_change": "A pharmacist created a protective cream using red veterinary petroleum.",
+    "ripple_effect": "Became Coppertone — launching the consumer sunscreen industry and awareness of UV protection."
+  },
+  {
+    "id": 31,
+    "title": "The Ice Trade’s Meltdown",
+    "origin": "Before refrigeration, ice was cut from lakes and sold worldwide as a cooling solution.",
+    "pivotal_change": "The invention of electric refrigeration made the trade obsolete within decades.",
+    "ripple_effect": "Changed global food preservation, reshaped shipping, and decentralized cold storage access."
+  },
+  {
+    "id": 32,
+    "title": "Muzak in the Workplace",
+    "origin": "Factories once used background music to stimulate worker productivity.",
+    "pivotal_change": "Scientifically-timed musical bursts were introduced to reduce boredom.",
+    "ripple_effect": "Paved the way for sound design in work, retail, and public environments."
+  },
+  {
+    "id": 33,
+    "title": "Why Bank Doors Swing Out",
+    "origin": "In the early 1900s, people died in a bank robbery because doors opened inward.",
+    "pivotal_change": "A nationwide regulation required public doors to swing outward.",
+    "ripple_effect": "Architectural safety standards were forever changed in public building design."
+  },
+  {
+    "id": 34,
+    "title": "The Sound of the Lightsaber",
+    "origin": "The sound designer for Star Wars accidentally combined projector hum and TV buzz.",
+    "pivotal_change": "This fusion created the unforgettable lightsaber sound.",
+    "ripple_effect": "Redefined cinematic sound design and became an icon of sci-fi culture."
+  },
+  {
+    "id": 35,
+    "title": "Sunscreen & the Bikini",
+    "origin": "The popularity of the bikini in postwar Europe increased skin exposure.",
+    "pivotal_change": "Sales of sun protection soared alongside changing fashion norms.",
+    "ripple_effect": "Spurred global skin-care industries and raised awareness of skin cancer and sun damage."
   }
 ]
         let currentCardIndex = 0;
@@ -207,7 +329,7 @@ function showCard(card) {
       <h2>${card.title}</h2>
       <p>${card.origin}</p>
       <p class="quote-container">${card.pivotal_change}</p>
-      <p>${card.ripple_effect}</p>
+      <p class="question-container">${card.ripple_effect}</p>
     `;
 }
 
